Add unit test to GeolocationSearch

--- a/geolocation_search_lib/tests/CMakeLists.txt
+++ b/geolocation_search_lib/tests/CMakeLists.txt
@@ -1,13 +1,18 @@
 add_executable(geolocation_search_tests
     main.cpp
-    geolocation_search_client_tests.cpp
+    geolocation_client_tests.cpp
+    geolocation_search_tests.cpp
     http_test_server.hpp
-    http_test_server.cpp)
+    http_test_server.cpp
+    geolocation_search_tests.cpp
+    geolocation_client_mock.hpp
+    database_client_mock.hpp)
 
 find_package(GTest REQUIRED)
 target_link_libraries(geolocation_search_tests
  PRIVATE
   GTest::GTest
+  GTest::gmock
   geolocation_search_client)
 
 add_test(geolocation_search_tests geolocation_search_client)
