--- a/geolocation_search_lib/CMakeLists.txt
+++ b/geolocation_search_lib/CMakeLists.txt
@@ -1,14 +1,10 @@
-# cmake_minimum_required(VERSION 3.27)
-
-# set(CMAKE_CXX_STANDARD 17)
-
-# project(geolocation_search_client)
-
-#enable_testing()
-
 add_subdirectory(tests)
 
+message("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 find_package(cpprestsdk REQUIRED)
+find_package(PostgreSQL REQUIRED)
+find_package(PQXX REQUIRED)
+#find_package(libpqxx REQUIRED)
 
 add_library(geolocation_search_client
     geolocation_search.cpp
@@ -23,8 +19,20 @@ add_library(geolocation_search_client
     include/geolocation_search_factory.hpp
     geolocation_search_factory.cpp
     include/null_databse.hpp)
-target_include_directories(geolocation_search_client PUBLIC include)
+
+message("${PostgreSQL_INCLUDE_DIRS}")
+target_include_directories(geolocation_search_client
+    PUBLIC
+        include
+    PRIVATE
+        libpqxx::pqxx_shared
+        ${PQXX_INCLUDE_DIRECTORIES}
+    )
+        #${PostgreSQL_INCLUDE_DIRS})
 
 target_link_libraries(geolocation_search_client
     PRIVATE
-    cpprestsdk::cpprest)
+        cpprestsdk::cpprest
+        ${PQXX_LIBRARIES}
+    )
+        #${PostgreSQL_LIBRARIES})
