--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ else()
     endif()
 endif()
 
-target_link_libraries(geolocation_search PRIVATE Qt${QT_VERSION_MAJOR}::Widgets geolocation_search_client)
+target_link_libraries(geolocation_search PRIVATE Qt${QT_VERSION_MAJOR}::Widgets geolocation_search_client spdlog::spdlog)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
